# sqlitecxx

./: README.md  sqlitecxx.code-workspace
sqlitecxx/: Makefile.am  NEWS  autogen.sh  cleanup.sh  configure  configure.ac
sqlitecxx/src/: Makefile.am  base.h  blob.h  column.h  datatypes.h  integer.h  main.cc  real.h  sqlitecxx.cc  sqlitecxx.h  text.h  verbose.h
sqlitecxx/tests/: Makefile  assignment_integer.cc  comparison_integer.cc  copy_constructor_integer.cc  postfix_integer_int.cc  postfix_integer_int16_t.cc  postfix_integer_int32_t.cc  postfix_integer_int64_t.cc  postfix_integer_int8_t.cc  postfix_integer_long.cc  postfix_integer_short.cc  prefix_integer_int.cc  prefix_integer_int16_t.cc  prefix_integer_int32_t.cc  prefix_integer_int64_t.cc  prefix_integer_int8_t.cc  prefix_integer_long.cc  prefix_integer_short.cc
